# moe-workshop

./: .env.example  .gitignore  README.md  config.py  moe_nb.ipynb  murder_mystery.ipynb  murder_mystery_update.ipynb  pyproject.toml
character_system_msgs/: assistent_clara.md  chef_mario.md  detective.md  detective_assistant.md  dr_biologist_alina.md  intern_jonas.md  investor_henrik.md  journalist_eva.md
protocols/: dr_lang_protocol_v1.md
