[project]
name = "moe-workshop"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "autogen-agentchat (>=0.5.5,<0.6.0)",
    "autogen-core (>=0.5.5,<0.6.0)",
    "autogen-ext (>=0.5.5,<0.6.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "mistralai (>=1.7.0,<2.0.0)",
    "openai (>=1.76.0,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.1"

